--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Matthew Wallingford"
+title                    : #"Matthew Wallingford"
 title_separator          : "-"
 name                     : &name "Matthew Wallingford"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://mattwallingford.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "mattwallingford/mattwallingford.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Matt Wallingford"
-  avatar           : "profile2.png"
+  avatar           : "profile.jpg"
   bio              : "PhD in Computer Science at University of Washington"
   location         : "Seattle, WA"
   employer         :
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : 
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/matt-wallingford-8a7b77130/"
+  linkedin         : "www.linkedin.com/in/matt-wallingford"
   orcid            : 
   pinterest        :
   soundcloud       :
