--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : ""
+title                    : "Matt Wallingford"
 title_separator          : "-"
 name                     : &name "Matthew Wallingford"
 description              : &description "personal description"
