--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Matt Wallingford"
+  name             : ""
   avatar           : "profile.jpg"
   bio              : "PhD in Computer Science at University of Washington"
   location         : "Seattle, WA"
