--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 
 locale                   : "en-US"
-title                    : "Matt Wallingford"
+title                    : "Matthew Wallingford"
 title_separator          : "-"
 name                     : &name "Matthew Wallingford"
 description              : &description "personal description"
