--- a/_config.yml
+++ b/_config.yml
@@ -97,13 +97,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/MattWallingford"
+  github           : "MattWallingford"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : 
   lastfm           :
-  linkedin         : "www.linkedin.com/in/matt-wallingford"
+  linkedin         : "matt-wallingford"
   orcid            : 
   pinterest        :
   soundcloud       :
